third_party/move/move-compiler-v2/tests/unit_test/test/expected_failure_constants_invalid.exp

Diagnostics:
error: Constant `0x2::m::C` has a non-u64 value.  Only `u64` values are permitted
  ┌─ tests/unit_test/test/expected_failure_constants_invalid.move:9:35
  │
9 │     #[expected_failure(abort_code=0x2::m::C)]
  │                                   ^^^^^^^^^

error: Unbound module `0x2::x` in constant
   ┌─ tests/unit_test/test/expected_failure_constants_invalid.move:13:35
   │
13 │     #[expected_failure(abort_code=0x2::x::C)]
   │                                   ^^^^^^^^^

error: Unbound constant `C0` in module `0x1::A`
   ┌─ tests/unit_test/test/expected_failure_constants_invalid.move:17:35
   │
17 │     #[expected_failure(abort_code=0x1::A::C0)]
   │                                   ^^^^^^^^^^
